cluster/tooling/admin2-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: admin2
  namespace: cilium
spec:
  containers:
    - name: admin
      image: registry.k8s.io/e2e-test-images/agnhost:2.39
      command:
        - sleep
        - "999999999999"
      securityContext:
        allowPrivilegeEscalation: true
        capabilities:
          add:
            - SYS_ADMIN
        privileged: true
      volumeMounts:
        - name: sys
          mountPath: /sys
        - name: dev
          mountPath: /dev
        - name: root
          mountPath: /root
  volumes:
    - name: sys
      hostPath:
        path: /sys
    - name: dev
      hostPath:
        path: /dev
    - name: root
      hostPath:
        path: /
  restartPolicy: Always
