cluster/tooling/debug-pod.yml
---
# See https://docs.cilium.io/en/latest/security/policy/kubernetes/#example-add-health-endpoint
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: debug-pod-allow-all
spec:
  endpointSelector:
    matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: Exists
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: debug-pod
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: debug-pod
specs:
  - description: debug-pod
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: debug-pod
    egress:
      - toEntities:
          - world
          - cluster
---
apiVersion: v1
kind: Pod
metadata:
  name: debug1
  labels:
    app.kubernetes.io/name: debug-pod
spec:
  containers:
    - name: admin
      image: ubuntu:22.04
      command:
        - sleep
        - "999999999999"
  restartPolicy: Always
